...
                let greenA: UIColor = UIColor(red: 58/255, green: 171/255, blue: 71/255, alpha: 1.0)

                UINavigationBar.appearance().largeTitleTextAttributes = [.foregroundColor: greenA]
                UINavigationBar.appearance().titleTextAttributes = [.foregroundColor: greenA]

            }
            .navigationBarTitle("Objetivos", displayMode: .large)
            .navigationBarItems(trailing:
                                    NavigationLink(destination: NovoObjetivoView()) {
                                        Image(systemName: "plus.circle.fill").imageScale(.large)
                                    }

                                    .foregroundColor(.primaryGreen)
            )
        }
        .accentColor(navAccentColor)
...
