...
    var body: some View {
        ZStack {
            VStack(alignment: .leading) {
                Text("Nome do Objetivo")
                    .padding(.top, 7.5)
                    .font(.system(size: 20, weight: .medium, design: .default))
                TextField("Digite o nome do objetivo", text: $nome)
                    .textFieldStyle(SuperCustomTextFieldStyle())
                    .disableAutocorrection(true)
                    .onReceive(Just(nome)) { _ in if nome.count > 20 {
                                                nome = String(nome.prefix(20))
                                            }}
                    .overlay(
...
